syntax = "proto3";

package todo;

option go_package = "slashlight.todo.v1;todov1";

service Todo {
  rpc CreateTask (NewTaskRequest) returns (NewTaskResponse);
  rpc GetTask (TaskRequest) returns (TaskResponse);
  rpc UpdateTask (UpdateRequest) returns (EmptyResponse);
  rpc DeleteTask (DeleteRequest) returns (EmptyResponse);
}

message NewTaskRequest {
  string title = 1;
  string author_id = 4;
  string description = 2;
  string deadline = 3;
}

message NewTaskResponse {
  string task_id = 1;
}

message TaskRequest {
  string author_id = 1;
}

message Task {
  string id = 1;
  string author_id = 6;
  string title = 2;
  string description = 3;
  string status = 4;
  string deadline = 5;
}

message TaskResponse {
  repeated Task tasks = 1;
}

message UpdateRequest {
  string new_title = 1;
  string new_description = 2;
  string new_status = 3;
  string new_deadline = 4;
  string id = 5;
  string author_id = 6;
}

message EmptyResponse {}

message DeleteRequest {
  string task_id = 1;
  string author_id = 2;
}